# alwaysgreen

./: .env  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION_VALIDATION_README.md  LICENSE  Makefile  README.md  env.example  fly.toml  fly.toml.production  pyproject.toml  setup_alwaysgreen.sh  test_alwaysgreen.sh  test_alwaysgreen_verbose.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nova-auto-fix.yml  nova-manual.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEMO_SCRIPT.md  DEPLOY_FLY.md  GITHUB_PACKAGES.md  INSTALLATION.md  LINKS_RESOURCES.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  SAFETY_GUARDRAILS.md  TASK_GRAPH.md  nova-greenline-business-model.md  nova-market-one-pager.md  nova-solution-audit.md
examples/demos/: README.md
examples/demos/algorithmic_challenges/: README.md
examples/demos/algorithmic_challenges/.github/workflows/: auto-fix-ci.yml
examples/demos/nova-demo-repo/: E2E_SETUP_GUIDE.md  NOVA_AGENT_FLOW.md  README.md  github-workflow-ci.yml
examples/demos/nova-demo-repo/.github/workflows/: ci.yml
github-app/: DEPLOYMENT.md  README.md
github-app/templates/: alwaysgreen.yml
scripts/: build_package.sh  setup_alwaysgreen.sh  smoke_test.sh  test_alwaysgreen.sh  test_alwaysgreen_verbose.sh
src/: calculator.py  string_utils.py
src/nova/: cli.py  config.py
src/nova/agent/: __init__.py  llm_client.py
src/nova/telemetry/: logger.py
src/nova/tools/: git.py  safety_limits.py
tests/: alwaysgreen_smoke_test.py
