[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alwaysgreen"
version = "0.5.0"
description = "AlwaysGreen: Self-healing CI/CD autopatcher"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AlwaysGreen Contributors", email = "support@alwaysgreen.ai"}
]
keywords = ["ci", "cd", "testing", "automation", "ai", "llm", "pytest", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/alwaysgreen-ci/alwaysgreen"
Repository = "https://github.com/alwaysgreen-ci/alwaysgreen"
Issues = "https://github.com/alwaysgreen-ci/alwaysgreen/issues"
Documentation = "https://github.com/alwaysgreen-ci/alwaysgreen/tree/main/docs"

[project]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-json-report",
    "black",
    "ruff",
]

[project.scripts]
alwaysgreen = "nova.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nova = ["py.typed"]
